
SUBDIRS = flags

EXTRA_DIST = \
	admin.xpm \
	admin_away.xpm \
	away.xpm \
	ingame.xpm \
	bot.xpm \
	join_icon.xpm \
	server.xpm \
	admin_ingame.xpm \
	channel.xpm \
	open_game.xpm \
	open_pw_game.xpm \
	started_game.xpm \
	closed_game.xpm \
	closed_pw_game.xpm \
 \
	rank0.xpm \
	rank1.xpm \
	rank2.xpm \
	rank3.xpm \
	rank4.xpm \
 \
	up.xpm \
	down.xpm \
 \
	close.xpm \
	userchat.xpm \
	battle.xpm \
	battle_list.xpm \
	battle_map.xpm \
	battle_settings.xpm \
	chat_icon.xpm \
	unknown_flag.xpm
