
SUBDIRS = flags

EXTRA_DIST = \
admin.xpm admin_away.xpm away.xpm ingame.xpm bot.xpm join_icon.xpm server.xpm admin_ingame.xpm channel.xpm open_game.xpm open_pw_game.xpm started_game.xpm closed_game.xpm closed_pw_game.xpm rank0.xpm rank1.xpm rank2.xpm rank3.xpm rank4.xpm up.xpm down.xpm close.xpm userchat.xpm battle.xpm battle_list.xpm battle_map.xpm battle_settings.xpm chat_icon.xpm unknown_flag.xpm options_icon.xpm nexists.xpm exists.xpm ready_unsync.xpm ready_q.xpm nready_unsync.xpm nready_q.xpm spectator.xpm colourbox.xpm spring.xpm
noinst_DATA = admin_away.xpm admin_ingame.xpm admin.xpm away.xpm \
	battle_list.xpm battle_map.xpm battle_settings.xpm battle.xpm bot.xpm channel.xpm \
	chat_icon.xpm closed_game.xpm closed_pw_game.xpm close.xpm down.xpm ingame.xpm \
	join_icon.xpm open_game.xpm open_pw_game.xpm rank0.xpm rank1.xpm rank2.xpm rank3.xpm \
	rank4.xpm server.xpm started_game.xpm unknown_flag.xpm up.xpm userchat.xpm
noinst_HEADERS = admin_away.xpm admin_ingame.xpm admin.xpm away.xpm \
	battle_list.xpm battle_map.xpm battle_settings.xpm



